--- a/src/style.css
+++ b/src/style.css
@@ -3,16 +3,20 @@
 :root {
   --font-primary: "DM Sans", sans-serif;
   --font-heading: "Space Grotesk", monospace;
-  --clr-primary: #252525;
+  --clr-primary: #282828;
   --clr-neutral: #f1f1f1;
+  --clr-neutral-200: #dbdbdb;
   --clr-accent: #85f03e;
 }
 
 body {
   font-family: var(--font-primary);
-  height: 100dvh;
   background-color: var(--clr-primary);
   color: var(--clr-neutral);
+}
+
+div#root {
+  height: 100vh;
 }
 
 /* RESET CSS */
@@ -47,14 +51,27 @@ a {
 
 .btn {
   padding: 1rem 2rem;
-  border: 1px solid var(--clr-accent);
   display: inline-block;
   transition: all 300ms ease;
+  font-family: var(--font-heading);
 }
-.btn:hover,
-.btn:focus-within {
+.btn-primary {
+  border: 1px solid var(--clr-accent);
+}
+.btn-primary:hover,
+.btn-primary:focus-within {
   background-color: var(--clr-accent);
   color: var(--clr-primary);
+}
+.btn-secondary {
+  border: 1px solid var(--clr-accent);
+  background-color: var(--clr-accent);
+  color: var(--clr-primary);
+}
+.btn-secondary:hover,
+.btn-secondary:focus-within {
+  background-color: transparent;
+  color: var(--clr-neutral);
 }
 
 .split {
@@ -94,13 +111,37 @@ nav.container {
   font-size: 1rem;
   font-family: var(--font-primary);
 }
-#logo {
-  font-size: 1.5rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+#logo img {
+  height: 50px;
+  width: 50px;
 }
-#logo span {
+
+/* HERO SECTION */
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  height: 65%;
+}
+main p {
+  color: var(--clr-neutral-200);
+}
+main span {
   color: var(--clr-accent);
-  font-size: 2rem;
+}
+.hero__title {
+  font-family: var(--font-heading);
+  color: var(--clr-accent);
+  font-weight: 500;
+  font-size: 7rem;
+  line-height: 1;
+  padding-block: 3rem;
+}
+.hero__labels {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
