--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,25 @@ a {
   z-index: -100;
 }
 
+.grid-bg-2 {
+  background-size: 20px 20px;
+  background-image: linear-gradient(to right, #344626 1px, transparent 1px),
+    linear-gradient(to bottom, #344626 1px, transparent 1px);
+  background-position: top center;
+  image-rendering: pixelated;
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    transparent,
+    10%,
+    white,
+    90%,
+    transparent
+  );
+  position: absolute;
+  inset: 0;
+  z-index: -100;
+}
+
 .container {
   margin-inline: auto;
   width: min(90%, 70.5rem);
@@ -163,4 +182,59 @@ main span {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+}
+
+/* STORY SECTION */
+
+section {
+  padding-block: 6rem;
+}
+
+.section__title {
+  font-family: var(--font-primary);
+  font-weight: 500;
+  font-size: 4rem;
+  line-height: 1;
+  padding-bottom: 4rem;
+}
+.section__title span {
+  color: var(--clr-accent);
+  font-family: var(--font-heading);
+}
+.group__gallery {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.group__gallery-item {
+  width: 298px;
+  height: 298px;
+  border: 2px solid var(--clr-accent);
+  font-family: var(--font-heading);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  cursor: pointer;
+  position: relative;
+}
+
+.group__gallery-item > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.moto-title {
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+.moto-infos {
+  font-weight: 300;
+}
+.moto-infos span {
+  font-weight: 500;
 }
