--- a/src/style.css
+++ b/src/style.css
@@ -367,11 +367,11 @@ section {
   top: 0%;
   bottom: 0%;
   width: 130%;
-  left: -25%;
+  left: -35%;
   background: url(noise.webp) repeat,
     linear-gradient(83.21deg, var(--clr-primary) 0%, var(--clr-accent) 100%);
   background-blend-mode: overlay;
-  -webkit-mask-image: radial-gradient(rgba(0, 0, 0), transparent 60%);
+  -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 0.6), transparent 70%);
   mask-image: radial-gradient(rgba(0, 0, 0, 0.4), transparent 70%);
 }
 .showcase-subtitle {
