--- a/src/style.css
+++ b/src/style.css
@@ -237,26 +237,26 @@ nav.container {
   opacity: 0;
 }
 [data-animation-1] {
-  animation: navbarFadeIn 1s cubic-bezier(0.53, 0, 0.22, 1) forwards;
+  animation: navbarFadeIn 750ms cubic-bezier(0.53, 0, 0.22, 1) forwards;
   animation-delay: 300ms;
 }
 [data-animation-2] {
-  animation: navbarFadeIn 1s cubic-bezier(0.53, 0, 0.22, 1) forwards;
+  animation: navbarFadeIn 750ms cubic-bezier(0.53, 0, 0.22, 1) forwards;
   animation-delay: 500ms;
 }
 [data-animation-3] {
-  animation: navbarFadeIn 1s cubic-bezier(0.53, 0, 0.22, 1) forwards;
+  animation: navbarFadeIn 750ms cubic-bezier(0.53, 0, 0.22, 1) forwards;
   animation-delay: 700ms;
 }
 [data-animated-btn] {
-  animation: btnFadeIn 1s cubic-bezier(0.53, 0, 0.22, 1) forwards;
+  animation: btnFadeIn 750ms cubic-bezier(0.53, 0, 0.22, 1) forwards;
   animation-delay: 2300ms;
   transform: translateX(-100%);
   opacity: 0;
   overflow-x: hidden;
 }
 [data-animated-logo] {
-  animation: logoFadeIn 1s cubic-bezier(0.53, 0, 0.22, 1) forwards;
+  animation: logoFadeIn 750ms cubic-bezier(0.53, 0, 0.22, 1) forwards;
   animation-delay: 2300ms;
   transform: translateY(-100%);
   opacity: 0;
@@ -298,7 +298,7 @@ nav.container {
   color: var(--clr-accent);
 }
 .hero__subtitle {
-  animation: titleFadeIn 1s cubic-bezier(0.53, 0, 0.22, 1) forwards;
+  animation: titleFadeIn 750ms cubic-bezier(0.53, 0, 0.22, 1) forwards;
   animation-delay: 1200ms;
   transform: translateX(-100%);
   overflow-x: hidden;
@@ -311,7 +311,7 @@ nav.container {
   font-size: 7rem;
   line-height: 1;
   padding-block: 3rem;
-  animation: titleFadeIn 1s cubic-bezier(0.53, 0, 0.22, 1) forwards;
+  animation: titleFadeIn 750ms cubic-bezier(0.53, 0, 0.22, 1) forwards;
   animation-delay: 1500ms;
   transform: translateX(-100%);
   overflow-x: hidden;
@@ -324,7 +324,7 @@ nav.container {
   width: 100%;
 }
 .hero__labels p {
-  animation: titleFadeIn 1s cubic-bezier(0.53, 0, 0.22, 1) forwards;
+  animation: titleFadeIn 750ms cubic-bezier(0.53, 0, 0.22, 1) forwards;
   animation-delay: 1800ms;
   transform: translateX(-100%);
   overflow-x: hidden;
@@ -358,7 +358,7 @@ nav.container {
   }
 }
 
-/* STORY SECTION */
+/* BIKE SECTION */
 
 section {
   padding-block: 6rem;
